# agent-failure-packet

./: AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  README.zh-CN.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: homebrew.md  issue-handoff-workflow.md  pr-ci-failure-handoff.md  product-foundation.md  publishing.md
docs/superpowers/specs/: 2026-06-13-packet-builder-design.md
ops/constraints/: production.md
scripts/: run-action.py
src/agent_failure_packet/: __main__.py  builder.py  cli.py  config.py  redaction.py  renderers.py  schema.py
tests/: test_docs.py  test_github_action.py  test_packet_builder.py
tests/fixtures/runs/: agent-pr-evidence-handoff-failure-v1.json  codex-cli-failure-v1.json  generic-failure-v1.json  github-copilot-agent-failure-v1.json
tests/fixtures/snapshots/: incident-generic.md
