[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xone-agent-failure-packet"
version = "0.2.0"
description = "Create redacted, shareable debug packets from failed AI agent runs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["build>=1", "pytest>=8"]

[project.scripts]
agent-failure-packet = "agent_failure_packet.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
